Supprimer une question par son id
